# django-mini-ecommerce

./: .gitignore  manage.py  pyproject.toml
django_rest_ecommerce/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  wsgi.py
django_rest_ecommerce/migrations/: 0001_initial.py
django_rest_ecommerce/views/: cart.py  order.py  product.py
